# drt-sdk-rs-0.16.0

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  andes.sh
contracts/benchmarks/send-tx-repeat/: Cargo.toml
contracts/benchmarks/send-tx-repeat/tests/: denali_test.rs
contracts/benchmarks/send-tx-repeat/wasm/: Cargo.toml
contracts/benchmarks/str-repeat/: Cargo.toml
contracts/benchmarks/str-repeat/tests/: denali_test.rs
contracts/benchmarks/str-repeat/wasm/: Cargo.toml
contracts/examples/adder/: Cargo.toml
contracts/examples/adder/abi/: Cargo.toml
contracts/examples/adder/tests/: denali_test.rs
contracts/examples/adder/wasm/: Cargo.toml
contracts/examples/crowdfunding-dcdt/: Cargo.toml
contracts/examples/crowdfunding-dcdt/abi/: Cargo.toml
contracts/examples/crowdfunding-dcdt/denali/: crowdfunding-claim-failed.scen.json  crowdfunding-claim-successful.scen.json  crowdfunding-fund-too-late.scen.json  crowdfunding-fund.scen.json  crowdfunding-init.scen.json  rewa-crowdfunding-init.scen.json
contracts/examples/crowdfunding-dcdt/interaction/: devnet.snippets.sh  testnet.snippets.sh
contracts/examples/crowdfunding-dcdt/src/: lib.rs
contracts/examples/crowdfunding-dcdt/tests/: denali_test.rs
contracts/examples/crowdfunding-dcdt/wasm/: Cargo.toml
contracts/examples/crowdfunding-erc20/: Cargo.toml
contracts/examples/crowdfunding-erc20/abi/: Cargo.toml
contracts/examples/crowdfunding-erc20/tests/: denali_test.rs
contracts/examples/crowdfunding-erc20/wasm/: Cargo.toml
contracts/examples/crypto-bubbles/: Cargo.toml
contracts/examples/crypto-bubbles/abi/: Cargo.toml
contracts/examples/crypto-bubbles/tests/: denali_test.rs
contracts/examples/crypto-bubbles/wasm/: Cargo.toml
contracts/examples/crypto-kitties/kitty-auction/: Cargo.toml
contracts/examples/crypto-kitties/kitty-genetic-alg/: Cargo.toml
contracts/examples/crypto-kitties/kitty-ownership/: Cargo.toml
contracts/examples/dcdt-nft-marketplace/: Cargo.toml
contracts/examples/dcdt-nft-marketplace/abi/: Cargo.toml
contracts/examples/dcdt-nft-marketplace/src/: lib.rs
contracts/examples/dcdt-nft-marketplace/wasm/: Cargo.toml
contracts/examples/erc1155/: Cargo.toml
contracts/examples/erc1155-marketplace/: Cargo.toml
contracts/examples/erc1155-marketplace/abi/: Cargo.toml
contracts/examples/erc1155-marketplace/denali/: auction_batch.scen.json  auction_single_token_rewa.scen.json  bid_first_rewa.scen.json  bid_second_rewa.scen.json  bid_third_rewa.scen.json  end_auction.scen.json  setup_accounts.json
contracts/examples/erc1155-marketplace/tests/: denali_test.rs
contracts/examples/erc1155-marketplace/wasm/: Cargo.toml
contracts/examples/erc1155-user-mock/: Cargo.toml
contracts/examples/erc20/: Cargo.toml
contracts/examples/factorial/: Cargo.toml
contracts/examples/lottery-dcdt/: Cargo.toml
contracts/examples/lottery-erc20/: Cargo.toml
contracts/examples/multisig/: Cargo.toml
contracts/examples/nft-storage-prepay/: Cargo.toml
contracts/examples/non-fungible-tokens/: Cargo.toml
contracts/examples/non-fungible-tokens/abi/: Cargo.toml
contracts/examples/non-fungible-tokens/abi/src/: main.rs
contracts/examples/ping-pong-rewa/: Cargo.toml
contracts/examples/rewa-dcdt-swap/: Cargo.toml
contracts/feature-tests/abi-tester/: Cargo.toml  abi_tester_expected.abi.json
contracts/feature-tests/async/: Cargo.toml
contracts/feature-tests/basic-features/: Cargo.toml
contracts/feature-tests/dcdt-contract-pair/: Cargo.toml
contracts/feature-tests/deploy-two-contracts/: Cargo.toml
contracts/feature-tests/execute-on-dest-dcdt-issue-callback/: Cargo.toml
contracts/feature-tests/local-dcdt-and-nft/: Cargo.toml
contracts/feature-tests/nft-receiver/: Cargo.toml
contracts/feature-tests/panic-message-features/: Cargo.toml
contracts/feature-tests/payable-features/: Cargo.toml
contracts/feature-tests/use-module/: Cargo.toml
contracts/modules/numbat-wasm-module-features/: Cargo.toml
contracts/modules/numbat-wasm-module-pause/: Cargo.toml
contracts/modules/numbat-wasm-module-users/: Cargo.toml
contracts/modules/numbat-wasm-module-users/src/: lib.rs
denali/: Cargo.toml  example.scen.json
denali/src/: account.rs  account_check.rs  account_raw.rs  account_raw_check.rs  scenario_raw.rs
numbat-codec/: Cargo.toml
numbat-codec-derive/: Cargo.toml
numbat-codec/src/: top_de_input.rs  top_ser_output.rs
numbat-wasm/: Cargo.toml  README.md
numbat-wasm-debug/: Cargo.toml
numbat-wasm-debug/src/: blockchain_mock.rs  execute_denali.rs  lib.rs
numbat-wasm-debug/src/api/: blockchain_api_mock.rs  send_api_mock.rs
numbat-wasm-debug/tests/: framework_denali_test.rs  sample_adder.rs
numbat-wasm-derive/: Cargo.toml
numbat-wasm-derive/src/: contract_impl.rs  macro_contract.rs
numbat-wasm-derive/src/generate/: abi_gen.rs  callback_gen.rs  callback_proxies_gen.rs  payable_gen.rs  proxy_gen.rs
numbat-wasm-derive/src/parse/: payable_parse.rs
numbat-wasm-derive/src/validate/: validate_method.rs
numbat-wasm-node/: Cargo.toml  README.md
numbat-wasm-node/src/: lib.rs
numbat-wasm-node/src/api/: big_int_api_node.rs  big_uint_api_node.rs  blockchain_api_node.rs  call_value_api_node.rs  contract_self_api_node.rs  crypto_api_node.rs  endpoint_arg_api_node.rs  endpoint_finish_api_node.rs  error_api_node.rs  log_api_node.rs  send_api_node.rs  storage_api_node.rs
numbat-wasm-output/: Cargo.toml
numbat-wasm-serde/: Cargo.toml
numbat-wasm/src/: lib.rs  macros.rs
numbat-wasm/src/api/: big_uint_api.rs  blockchain_api.rs  call_value_api.rs  contract_self_api.rs  log_api.rs  send_api.rs
numbat-wasm/src/api/uncallable/: send_api_uncallable.rs
numbat-wasm/src/dcdt/: system_sc_proxy.rs
numbat-wasm/src/io/: arg_de_input.rs
numbat-wasm/src/storage/: protected_keys.rs
numbat-wasm/src/types/general/: code_metadata.rs  dcdt_local_role.rs  dcdt_token_data.rs  h256.rs  token_identifier.rs
numbat-wasm/src/types/interaction/: contract_call.rs  mod.rs  send_dcdt.rs
tools/test-gen/src/: main.rs
tutorial/: book.toml
(+159 files in other folders)
