[package]
name = "numbat-wasm-debug"
version = "0.16.0"
edition = "2018"

authors = ["Sumanth <saisumanthvadla@gmail.com>", "Numbat Network <contact@numbat.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/NumbatNetwork/numbat-wasm-rs"
homepage = "https://numbat.com/"
documentation = "https://docs.numbat.com/"
description = "Numbat WebAssembly smart contract API debugging mocks and utils"
keywords = ["numbat", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
num-bigint = "0.3"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.9.2"
sha3 = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.numbat-wasm]
version = "0.16.0"
path = "../numbat-wasm"

[dependencies.denali]
version = "0.7.0"
path = "../denali"
