[package]
name = "numbat-wasm-module-users"
version = "0.16.0"
edition = "2018"

authors = ["Sumanth <saisumanthvadla@gmail.com>", "Numbat Network <contact@numbat.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/NumbatNetwork/numbat-wasm-rs"
homepage = "https://numbat.com/"
documentation = "https://docs.numbat.com/"
description = "Numbat WebAssembly smart contract module that provides a contract users flag"
keywords = ["numbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]

[features]
wasm-output-mode = ["numbat-wasm-node"]

[dependencies.numbat-wasm]
version = "0.16.0"
path = "../../../numbat-wasm"

[dependencies.numbat-wasm-derive]
version = "0.16.0"
path = "../../../numbat-wasm-derive"

[dependencies.numbat-wasm-node]
version = "0.16.0"
path = "../../../numbat-wasm-node"
optional = true

[dev-dependencies.numbat-wasm-debug]
version = "0.16.0"
path = "../../../numbat-wasm-debug"
