[package]
name = "non-fungible-tokens-abi"
version = "0.0.0"
authors = ["Sumanth <saisumanthvadla@gmail.com>"]
edition = "2018"
publish = false

[dependencies.non-fungible-tokens]
path = ".."

[dependencies.numbat-wasm]
version = "0.16.0"
path = "../../../../numbat-wasm"

[dependencies.numbat-wasm-debug]
version = "0.16.0"
path = "../../../../numbat-wasm-debug"
